test/method/refer_to_name.lox
struct Foo {
  fn method() {
    print method // error: undeclared variable 'method'
  }
}

Foo().method()
